set up home and about

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,10 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta name="keywords" content="SaHolly-Design, Vocabel-Trainer">
+    <meta name="author" content="Sabine Hollatz">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Domine|Inconsolata" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css"> -->
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
