--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="SaHolly-Design, Vocabel-Trainer">
     <meta name="author" content="Sabine Hollatz">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Domine|Inconsolata" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css"> -->
     <!--
       manifest.json provides metadata used when your web app is added to the
